--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
